<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QueryScore</string>
    <string name="menu_about">About</string>
    <string name="student_id_hint">input your ID.</string>
    <string name="student_passwd_hint">input your password.</string>
    <string name="button_logon">Submit</string>
    <string name="button_clear">Clear</string>
    <string name="button_quit">Quit</string>
    <string name="student_id">ID: </string>
    <string name="student_name">Name: </string>
    <string name="blank"></string>
    <string name="loading">Loading</string>
    <string name="load_data">transmiting data</string>
    <string name="title_activity_score_list">ScoreListActivity</string>
    <string name="spinner_title">Choose Term:</string>
    <string name="class_name">Class:</string>
    <string name="class_score">Score:</string>
    <string name="class_properity">Properity:</string>
    <string name="class_id">ID:</string>
    <string name="class_testType">Test Type:</string>
    <string name="class_length">Length:</string>
    <string name="class_scoreType">Score Type:</string>
    <string name="no_network">Network not connect.</string>
    <string name="error">ID or password not correct.</string>
    <string name="title_activity_class_detail">ClassDetailActivity</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_about">About</string>
    <string name="totalNO">Total:</string>
    <string name="about_content">About Logon:\n
        When you got an error message said:\n
        ID or password not correct. it may not really \n
        mean that. because sometimes the website\n
        cannot provide data correctly. So when you \n
        cannot logon and you are sure your password \n
        is correct, Just try again later.\n
        \n
        About ID:\n
        As I am an undergraduate student, I only\n
        know the common student id which includes\n
        eight numbers. So if you cannot logon your\n
        ID. please contact me.\n 
                Sina Weibo @东东大学生.
        </string>

</resources>