<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClassDetailActivity"
    android:padding="20dip" >
    
 	<LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">
 	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/class_properity"
        	android:textSize="20sp"/>
 	    <TextView 
 	        android:id="@+id/class_properity"
 	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"/>
 	</LinearLayout> 
 	
 	<View
        android:paddingTop="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="10dp"
        android:background="?android:attr/listDivider"/>
 	
 	<LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">
 	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/class_id"
        	android:textSize="20sp"/>
 	    <TextView 
 	        android:id="@+id/class_id"
 	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"/>
 	</LinearLayout>
 	
 	<View
        android:paddingTop="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="10dp"
        android:background="?android:attr/listDivider"/>
    
 	<LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">
 	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/class_name"
        	android:textSize="20sp"/>
 	    <TextView 
	        android:id="@+id/class_name"
 	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"/>
 	</LinearLayout>
 	
 	<View
        android:paddingTop="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="10dp"
        android:background="?android:attr/listDivider"/>
    
    <LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">
 	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/class_testType"
        	android:textSize="20sp"/>
 	    <TextView 
	        android:id="@+id/class_testType"
 	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"/>
 	</LinearLayout>
 	
    <View
        android:paddingTop="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="10dp"
        android:background="?android:attr/listDivider"/>
    
  	<LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">
 	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/class_length"
        	android:textSize="20sp"/>
 	    <TextView 
	        android:id="@+id/class_length"
 	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"/>
 	</LinearLayout>
 	
  	<View
        android:paddingTop="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="10dp"
        android:background="?android:attr/listDivider"/>

	<LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">
 	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/class_scoreType"
        	android:textSize="20sp"/>
 	    <TextView 
	        android:id="@+id/class_scoreType"
 	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"/>
 	</LinearLayout>
 	
	<View
        android:paddingTop="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="10dp"
        android:background="?android:attr/listDivider"/>
    
   	<LinearLayout 
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">
 	    <TextView
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/class_score"
        	android:textSize="20sp"/>
 	    <TextView 
	        android:id="@+id/class_score"
 	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="20sp"/>
 	</LinearLayout>
 	
 	<View
        android:paddingTop="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="10dp"
        android:background="?android:attr/listDivider"/>

</LinearLayout>